# Remy

./: .gitignore  .remyignore  .remyignore.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  new_rule_request.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  PROVIDERS.md  RULES.md  USAGE.md
remy/: __main__.py  cli.py
remy/config/: __init__.py  schema.py  store.py  wizard.py
remy/providers/: __init__.py  anthropic.py  base.py  groq.py  nvidia_nim.py  ollama.py  openai_provider.py  openrouter.py  registry.py  xai.py
remy/report/: __init__.py  json_export.py  models.py  prompt_builder.py  terminal_report.py
remy/rules/: api_route_patterns.yaml  auth_bypass_patterns.yaml  secrets_patterns.yaml
remy/rules/sast_rules/: javascript_rules.yaml  python_rules.yaml
remy/scanners/: __init__.py  api_surface_scanner.py  auth_bypass_scanner.py  base.py  dependency_scanner.py  llm_logic_scanner.py  orchestrator.py  sast_js_ts.py  sast_python.py  secrets_scanner.py
remy/ui/: __init__.py  banner.py  progress.py  tables.py  theme.py
remy/utils/: __init__.py  entropy.py  file_walker.py  hashing.py
tests/fixtures/vulnerable_app/: app.py  requirements.txt
tests/test_config/: test_store.py
tests/test_report/: test_json_export.py  test_prompt_builder.py
tests/test_scanners/: test_orchestrator.py  test_sast_python.py  test_secrets_scanner.py
