[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remy-agent"
version = "0.1.1"
description = "AI-Powered Codebase Bug & Vulnerability Scanning CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Abhay Gupta", email = "abhay@medusa-security.com" },
]
maintainers = [
    { name = "Abhay Gupta" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "tomlkit>=0.12.0",
    "keyring>=24.0.0",
    "cryptography>=43.0.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyperclip>=1.8.2",
    "pyyaml>=6.0.1"
]

[project.urls]
Homepage = "https://github.com/Medusa-Security/remy"
"Bug Tracker" = "https://github.com/Medusa-Security/remy/issues"
Documentation = "https://github.com/Medusa-Security/remy/blob/main/README.md"
Changelog = "https://github.com/Medusa-Security/remy/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0"
]

[project.scripts]
remy = "remy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["remy"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

